--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <div class="postcard-container">
         <div class="postcard">
             <div class="front">
-                <h1>Hi</h1>
+                <h1>привет сашка</h1>
             </div>
             <div class="back">
-                <p>Would you be my valentine?</p>
+                <p>го в роблокс вечером-`♡´-</p>
             </div>
         </div>
     </div>
 </body>
 </html>
+
 
 
  
